<resources>
    <string name="app_name">Instagram</string>

    <string name="signup_id_safe">새 계정에 사용할 사용자 이름을 선택하요. 나중에\n언제든지 변경할 수 있습니다.</string>
    <string name="signup_password_safe">비밀번호를 저장할 수 있으므로 iCloud® 기기에서 로그인 정보를 입력하지 않아도 됩니다.</string>
    <string name="comment_title">댓글</string>

    // 회원가입 관련
    <string name="add_new_account">새로운 전화번호 또는 이메일 주소 추가</string>
    <string name="first_signup_email">전화번호 또는 이메일 주소 입력</string>
    <string name="alreadyAccount">이미 계정이 있으신가요?</string>
    <string name="login">로그인</string>
    <string name="signup">가입하기</string>
    <string name="korea_phone">KR +82</string>
    <string name="phone">전화번호</string>
    <string name="email">이메일</string>
    <string name="next">다음</string>
    <string name="addName">이름 추가</string>
    <string name="name">이름</string>
    <string name="addID">사용자 이름 만들기</string>

    <string name="signup_phone_safe">보안 및 로그인 목적으로 Instagram에서 보내는 SMS\n알림을 수신할 수 있습니다.</string>
    <string name="signup_name_safe">친구들이 회원님을 찾을 수 있도록 이름을 추가하세요.</string>
    <string name="signup_complete_safe">나중에 언제든지 사용자 이름을 변경할 수 있습니다.</string>
    <string name="signup_complete_safe2">서비스를 이용하는 사람이 회원님의 연락처 정보를 Instagram에 업\n로드했을 수도 있습니다. 더 알아보기.</string>

    <string name="birthday">생일 추가</string>
    <string name="why_birthday">공개 프로필에 포함되지 않습니다.\n왜 생일을 입력해야 하나요?</string>
    <string name="birthday_safe">비즈니스나 반려동물 등을 위한 계정인 경우에도 회원님의\n생일을 사용하세요.</string>

    <string name="term">약관 동의</string>
    <string name="term_safe">Instagram은 회원님의 개인 정보를 안전하게 보호합니다.\n새 계정을 만들려면 모든 약관에 동의하세요.</string>
    <string name="agree_all">모두 동의</string>
    <string name="use_term">이용 약관(필수)</string>
    <string name="data_term">데이터 정책(필수)</string>
    <string name="location_term">위치 기반 기능(필수)</string>
    <string name="see_more">더 알아보기</string>
    <string name="go_next">계속</string>

    // 활동 액티비티 관련
    <string name="activity">활동</string>
    <string name="follow_request">팔로우 요청</string>
    <string name="not_read">읽지 않음</string>
    <string name="check">확인</string>
    <string name="remove">삭제</string>
    <string name="follow_info">요청을 승인하거나 무시합니다</string>

    // 게시물 관련
    <string name="post">게시물</string>
    <string name="new_post">새 게시물</string>
    <string name="recent">최근 항목</string>
    <string name="select_many">여러 항목 선택</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>