<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/signup_id_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addID"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="55dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/signup_id_safe_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signup_id_safe"
        android:textAlignment="center"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@+id/signup_id_title_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/signup_ID_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:inputType="text"
        android:paddingHorizontal="20dp"
        android:textColor="@color/black"
        android:textColorHint="#D5D5D5"
        android:background="@drawable/signup_text_background"
        android:paddingVertical="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintTop_toBottomOf="@id/signup_id_safe_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/signup_id_warning_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="#F15F5F"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/signup_ID_et"
        app:layout_constraintStart_toStartOf="@id/signup_ID_et"
        app:layout_constraintEnd_toEndOf="@id/signup_ID_et"/>

    <TextView
        android:id="@+id/signup_id_next_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="15sp"
        android:paddingVertical="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="30dp"
        android:background="@drawable/lightblue_round_stroke"
        app:layout_constraintTop_toBottomOf="@id/signup_id_warning_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_gray"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@id/signup_id_have_account_tv"/>

    <TextView
        android:id="@+id/signup_id_have_account_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alreadyAccount"
        android:textColor="#A6A6A6"
        app:layout_constraintHorizontal_chainStyle="packed"
        android:layout_marginBottom="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/signup_id_login_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/signup_id_login_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="#3897F0"
        android:layout_marginStart="7dp"
        app:layout_constraintTop_toTopOf="@id/signup_id_have_account_tv"
        app:layout_constraintBottom_toBottomOf="@id/signup_id_have_account_tv"
        app:layout_constraintStart_toEndOf="@id/signup_id_have_account_tv"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>