<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/first_signup_step1_back_iv"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_back"
        android:padding="7dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/first_signup_step1_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_signup_email"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/first_signup_step1_back_iv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/first_signup_step1_tb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        app:tabIndicatorFullWidth="true"
        app:tabIndicatorColor="@color/black"
        app:tabRippleColor="#00ff0000"
        app:tabIndicatorHeight="1dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/first_signup_step1_title_tv"/>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/first_signup_step1_vp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintTop_toBottomOf="@+id/first_signup_step1_tb"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/first_signup_step1_have_account_tv"/>

    <TextView
        android:id="@+id/first_signup_step1_have_account_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alreadyAccount"
        android:textColor="#A6A6A6"
        app:layout_constraintHorizontal_chainStyle="packed"
        android:layout_marginBottom="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/first_signup_step1_login_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/first_signup_step1_login_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="#3897F0"
        android:layout_marginStart="7dp"
        app:layout_constraintTop_toTopOf="@id/first_signup_step1_have_account_tv"
        app:layout_constraintBottom_toBottomOf="@id/first_signup_step1_have_account_tv"
        app:layout_constraintStart_toEndOf="@id/first_signup_step1_have_account_tv"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>