<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/first_signup_phone_ly"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/login_signup_background"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/first_signup_kr_phone_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/korea_phone"
            android:textColor="#3897F0"
            android:textSize="20sp"
            android:layout_marginStart="20dp"
            android:layout_marginVertical="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <View
            android:layout_width="2dp"
            android:layout_height="35dp"
            android:background="@color/light_gray"
            android:layout_marginStart="20dp"
            app:layout_constraintStart_toEndOf="@id/first_signup_kr_phone_tv"
            app:layout_constraintTop_toTopOf="@id/first_signup_kr_phone_tv"
            app:layout_constraintBottom_toBottomOf="@id/first_signup_kr_phone_tv"/>

        <EditText
            android:id="@+id/first_signup_phone_et"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/phone"
            android:textColor="@color/black"
            android:textColorHint="#D5D5D5"
            android:background="@null"
            android:paddingVertical="8dp"
            android:layout_marginStart="40dp"
            app:layout_constraintStart_toEndOf="@+id/first_signup_kr_phone_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/first_signup_phone_next_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="15sp"
        android:paddingVertical="14dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/login_btn_background"
        app:layout_constraintTop_toBottomOf="@id/first_signup_phone_ly"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/first_signup_safe_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/first_signup_phone_safe"
        android:textAlignment="center"
        android:textColor="#A6A6A6"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/first_signup_phone_next_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>