<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/activity_not_read_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_read"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="18sp"
        android:visibility="gone"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/activity_not_read_layout_cl"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        app:layout_constraintTop_toBottomOf="@id/activity_not_read_title_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/activity_not_read_profile_iv"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="15dp"
            android:src="@drawable/basic_profile"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/activity_not_read_request_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="팔로우 요청, 시간"
            android:maxLines="2"
            android:textColor="@color/black"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            app:layout_constraintStart_toEndOf="@id/activity_not_read_profile_iv"
            app:layout_constraintEnd_toStartOf="@id/activity_not_read_check_tv"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/activity_not_read_check_tv"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/check"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:textSize="15sp"
            android:textStyle="bold"
            android:paddingVertical="7dp"
            android:background="@drawable/blue_round_stroke"
            android:layout_marginEnd="5dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@id/activity_not_read_remove_tv"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/activity_not_read_remove_tv"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/remove"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:textSize="15sp"
            android:textStyle="bold"
            android:background="@drawable/gray_stroke_with_white"
            android:paddingVertical="7dp"
            android:layout_marginEnd="15dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>