<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/signup_password_back_iv"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:src="@drawable/ic_back"
        android:padding="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/signup_password_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="비밀번호 만들기"
        android:textStyle="bold"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/signup_password_caution_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signup_password_safe"
        android:textColor="#5D5D5D"
        android:textSize="15sp"
        android:textAlignment="center"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintTop_toBottomOf="@+id/signup_password_title_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/signup_password_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/login_signup_background"
        android:hint="비밀번호"
        android:inputType="textPassword"
        android:textSize="15sp"
        android:textColorHint="#5D5D5D"
        android:layout_marginTop="30dp"
        android:paddingVertical="12dp"
        android:paddingHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@id/signup_password_caution_tv"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <CheckBox
        android:id="@+id/signup_password_remember_cb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="비밀번호 저장"
        android:checked="true"
        android:buttonTint="#4CBFFF"
        app:layout_constraintTop_toBottomOf="@id/signup_password_et"
        app:layout_constraintStart_toStartOf="@id/signup_password_et"/>

    <TextView
        android:id="@+id/signup_password_next_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="다음"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:paddingVertical="12dp"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="30dp"
        android:background="@drawable/lightblue_round_stroke"
        app:layout_constraintTop_toBottomOf="@id/signup_password_remember_cb"/>

    <TextView
        android:id="@+id/signup_password_have_account_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alreadyAccount"
        android:textColor="#A6A6A6"
        app:layout_constraintHorizontal_chainStyle="packed"
        android:layout_marginBottom="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/signup_password_login_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/signup_password_login_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="#3897F0"
        android:layout_marginStart="7dp"
        app:layout_constraintTop_toTopOf="@id/signup_password_have_account_tv"
        app:layout_constraintBottom_toBottomOf="@id/signup_password_have_account_tv"
        app:layout_constraintStart_toEndOf="@id/signup_password_have_account_tv"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>